# Context-Switcher

./: .gitignore  README.md  agents.md  context.bat  progress.md  pyproject.toml  pyrightconfig.json  run_test.py  tests_out.txt
.github/workflows/: auto-merge-jules.yml  ci.yml  release.yml
modes/: dev.yaml  dev.yaml.example  gaming.yaml  gaming.yaml.example  study.yaml  study.yaml.example
schema/: mode_schema.json
src/: __init__.py  cli.py  hotkeys.py  tray.py  tui.py  wizard.py
src/agents/: base_agent.py  browser_agent.py  environment_agent.py  layout_agent.py  orchestrator.py  process_manager.py
src/core/: __init__.py  config_loader.py  event_bus.py  logger.py  snapshot.py  state.py
tests/: test_browser_agent.py  test_config_loader.py  test_environment_agent.py  test_event_bus.py  test_hotkeys.py  test_layout_agent.py  test_logger.py  test_orchestrator.py  test_process_manager.py  test_snapshot.py  test_tray.py  test_tui.py
tests/fixtures/: invalid_schema.yaml  no_name.yaml  valid.yaml
